# vittcoin

./: .gitignore  README.md  data.db
api/: README.md  app.py  data.db  deps.py  env.example  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 686849814c4a_seed_fake_transactions.py  7f99731087ee_seed_admin_users.py  960907d33978_populate_username.py  9dbc1558647d_create_challenges_table.py  c1f2a822a35b_add_username_column.py  e4d3c2b1a0f9_add_requests_table.py
api/core/: config.py  dependencies.py  logging.py  security.py
api/db/: session.py
api/db/models/: __init__.py  challenge.py  request.py  transaction.py  user.py
api/repositories/: __init__.py  challenge_repository.py  transaction_repository.py  user_repository.py
api/routes/: __init__.py
api/routes/v1/: router.py
api/routes/v1/endpoints/: admin.py  auth.py  health.py  users.py
api/schemas/: __init__.py  auth.py  challenge.py  transaction.py  user.py
api/services/: __init__.py  auth_service.py  user_service.py
api/utils/: __init__.py  pagination.py
ios/Vittcoin/: Package.swift
ios/Vittcoin/Dependencies/: Stub.swift
ios/Vittcoin/Vittcoin/: AppDelegate.swift  Config.swift  ContentView.swift  LaunchScreen.storyboard  MainTabView.swift  SplashView.swift  VittcoinApp.swift
ios/Vittcoin/Vittcoin.xcodeproj/: project.pbxproj
ios/Vittcoin/Vittcoin/Extensions/: Color+Palette.swift
ios/Vittcoin/Vittcoin/Services/: AuthService.swift  KeychainService.swift  RequestService.swift  ShopService.swift  (+1 more)
web/: package-lock.json
web/app/: globals.css  page.tsx
(+23 files in other folders)
